--- a/src/styles/MainPage.module.css
+++ b/src/styles/MainPage.module.css
@@ -5,6 +5,8 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .header {
@@ -13,6 +15,7 @@
     justify-content: space-between; /* 로고는 왼쪽, PixelWriting은 오른쪽으로 정렬 */
     width: 100%; /* 전체 너비를 차지하도록 설정 */
     height: auto;
+    margin: 10px;
 }
 
 .headerText {
