--- a/src/styles/MainPage.module.css
+++ b/src/styles/MainPage.module.css
@@ -1,12 +1,19 @@
 /* MainPage.module.css */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     padding-left: 10px;
     padding-right: 10px;
+    overflow: hidden; /* 가로 스크롤 방지 */
 }
 
 .header {
